src/elements/snapshots/panoramix__elements__textbox__tests__new_textbox-2.snap
---
source: src/elements/textbox.rs
expression: textbox_data

---
TextBoxData {
    text: "Hello",
    flex: FlexParams {
        flex: None,
        alignment: None,
    },
    reserved_widget_id: None,
}
