src/elements/snapshots/panoramix__elements__textbox__tests__new_textbox.snap
---
source: src/elements/textbox.rs
expression: textbox

---
TextBox {
    text: "Hello",
    flex: FlexParams {
        flex: 1.0,
        alignment: None,
    },
    reserved_widget_id: None,
}
