src/elements/snapshots/panoramix__elements__textbox__tests__textbox_keydown.snap
---
source: src/elements/textbox.rs
expression: harness.get_root_debug_state()

---
RootWidget(
    Column(
        IdentityWrapper(
            TextBox(
                "Hello",
            ),
        ),
    ),
)
