src/elements/snapshots/panoramix__elements__textbox__tests__textbox_widget-2.snap
---
source: src/elements/textbox.rs
expression: textbox_state_2

---
RootWidget(
    Column(
        IdentityWrapper(
            TextBox(
                "World",
            ),
        ),
    ),
)
