src/elements/snapshots/panoramix__elements__textbox__tests__textbox_widget.snap
---
source: src/elements/textbox.rs
expression: textbox_state

---
RootWidget(
    Scroll(
        ClipBox(
            Column(
                IdentityWrapper(
                    TextBox(
                        "Hello",
                    ),
                ),
            ),
        ),
    ),
)
